# pq-fsr

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: implementation.md  security.md  spec.md
.github/workflows/: ci.yml
docs/: BENCHMARKS.md  README_RUST.md  outreach_checklist.md  presentation_outline.md  whitepaper.md
docs/nist_dossier/: criteria_mapping.md  executive_summary.md  test_vectors.json
docs/spec/: comparison_signal.md  forward_secret_ratchet.md
examples/: examples.ipynb
pqfsr_core/: Cargo.toml
pqfsr_core/benches/: encryption_bench.rs  handshake_bench.rs  serialization_bench.rs  signature_bench.rs
pqfsr_core/python/pq_fsr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pqfsr_core/python/pqfsr/: __init__.py  rust_wrapper.py
pqfsr_core/src/: crypto.rs  error.rs  lib.rs  ratchet.rs  serialization.rs  session.rs  signatures.rs  state.rs  strategy.rs
pqfsr_core/tests/: common.rs  crypto_test.rs  integration_test.rs  ratchet_test.rs  serialization_test.rs  session_test.rs  signatures_test.rs  strategy_test.rs
src/pqfsr/: __init__.py  ratchet.py
tests/: test_cbor.py  test_crypto_speculative.py  test_edge_cases.py  test_errors.py  test_handshake.py  test_integration.py  test_property.py  test_quick.py  test_ratchet.py  test_security.py  test_serialization.py  test_signatures.py  test_strategy.py  test_v2_features.py  test_vectors.py  utils.py
tools/: benchmark.py
