[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pq-fsr"
version = "0.1.0"
description = "Reference implementation of a post-quantum forward-secret ratchet (PQ-FSR)."
authors = [{name = "CSF Crypto Team"}]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0"]
